--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </section>
     </main>
     <footer id="footer">
-        <a><span class="icon solid fab fa-code"></span> Development by StrangeCode</a>
+        <!-- MANTENER ESTE ENLACE PARA QUE MÁS PERSONAS PUEDAN APRENDER COMO TÚ ;) -->
+        <a href="https://www.youtube.com/channel/UCl24Q__MfUNDMhNWBluHcTg" target="_blank"><span class="icon solid fab fa-code"></span> Development by StrangeCode</a>
         <a>Copyright © 2020 Todos los derechos reservados.</a>
     </footer>
 </body>
