Implementa logo de canal y se aplican cambios de estilos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <main id="main">
         <section>
             <div class="container">
-                <h1>Links de contacto</h1>
+                <img class="logo" src="img/logo.png">
                 <ul>
+                    <br>
                     <li>
                         <a href="https://www.youtube.com/channel/UCl24Q__MfUNDMhNWBluHcTg" target="_blank">
                             <span class="icon brands fab fa-youtube"></span> YouTube</a>
