--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main id="main">
         <section>
             <div class="container">
-                <img class="logo" src="img/logo.png">
+                <img class="logo" alt='logo no disponible' src="img/logo.png">
                 <ul>
                     <br>
                     <li>
