Se implementa cambio de diseño

--- a/index.html
+++ b/index.html
@@ -7,60 +7,54 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StrangeCode Links</title>
-    <link rel="ico" href="img/logo.jpeg">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="ico" href="assets/img/logo.jpeg">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <header id="header">
-        <h1><span class="icon solid fab fa-code"></span> StrangeCode Links</h1>
+        <h1><span class="icon solid fab fa-code"></span> StrangeCode</h1>
     </header>
     <main id="main">
-        <section>
-            <div class="container">
-                <img class="logo" alt='logo no disponible' src="img/logo.png">
-                <ul>
-                    <br>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UCl24Q__MfUNDMhNWBluHcTg" target="_blank">
-                            <span class="icon brands fab fa-youtube"></span> YouTube</a>
-                    </li>
 
-                    <li>
-                        <a href="https://twitter.com/StrngCode" target="_blank">
-                            <span class="icon brands fab fa-twitter"></span> Twitter</a>
-                    </li>
-
-                    <li>
-                        <a href="https://www.instagram.com/strngcode/?hl=es-la" target="_blank">
-                            <span class="icon brands fab fa-instagram"></span> Instagram</a>
-                    </li>
-
-                    <li>
-                        <a href="https://www.tiktok.com/@strange_code?lang=es" target="_blank">
-                            <span class="icon brands fab fa-tiktok"></span> TikTok</a>
-                    </li>
-
-                    <li>
-                        <a href="https://discord.gg/26ptv6URXY" target="_blank">
-                            <span class="icon brands fab fa-discord"></span> Discord</a>
-                    </li>
-
-                    <li>
-                        <a href="https://github.com/Strange-Code" target="_blank">
-                            <span class="icon brands fab fa-github"></span> GitHub</a>
-                    </li>
-
-                </ul>
-
+        <div class="resumen">
+            <img class="logo" alt='logo no disponible' src="assets/img/logo.png">
+            <p>Te enseñamos a programar de manera sencilla y entretenida, utlizando las ultimas tecnologias del mercado.</p>
+            <div class="tecnologias">
+                <img id="slider1" class="logos" alt='logo no disponible' src="assets/img/html.png">
+                <img id="slider2" class="logos" alt='logo no disponible' src="assets/img/css.png">
+                <img id="slider3" class="logos" alt='logo no disponible' src="assets/img/js.png">
             </div>
-        </section>
+        </div>
+
+        <div class="redes">
+
+            <a href="https://www.youtube.com/channel/UCl24Q__MfUNDMhNWBluHcTg" target="_blank">
+                <span class="icon brands fab fa-youtube"></span></a>
+
+            <a href="https://twitter.com/StrngCode" target="_blank">
+                <span class="icon brands fab fa-twitter"></span></a>
+
+            <a href="https://www.instagram.com/strngcode/?hl=es-la" target="_blank">
+                <span class="icon brands fab fa-instagram"></span></a>
+
+            <a href="https://www.tiktok.com/@strange_code?lang=es" target="_blank">
+                <span class="icon brands fab fa-tiktok"></span></a>
+
+            <a href="https://discord.gg/26ptv6URXY" target="_blank">
+                <span class="icon brands fab fa-discord"></span></a>
+
+            <a href="https://github.com/Strange-Code" target="_blank">
+                <span class="icon brands fab fa-github"></span></a>
+
+        </div>
     </main>
     <footer id="footer">
         <!-- MANTENER ESTE ENLACE PARA QUE MÁS PERSONAS PUEDAN APRENDER COMO TÚ ;) -->
         <a href="https://www.youtube.com/channel/UCl24Q__MfUNDMhNWBluHcTg" target="_blank"><span class="icon solid fab fa-code"></span> Development by StrangeCode</a>
-        <a>Copyright © 2020 Todos los derechos reservados.</a>
+        <a>Compartiendo conocimiento :)</a>
     </footer>
 </body>
+<script src="assets/js/slider.js"></script>
 
 </html>
