--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StrangeCode Links</title>
-    <link rel="ico" href="assets/img/logo.jpeg">
+    <link rel="ico" type="image/png" href="assets/img/logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
