--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="https://www.tiktok.com/@strange_code?lang=es" target="_blank">
                 <span class="icon brands fab fa-tiktok"></span></a>
 
-            <a href="https://discord.gg/26ptv6URXY" target="_blank">
+            <a href="https://discord.com/invite/unCerZNvau" target="_blank">
                 <span class="icon brands fab fa-discord"></span></a>
 
             <a href="https://github.com/Strange-Code" target="_blank">
